Correction d'un bug sur le dépassement a la remontée des collapses pour les composants collapses

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -342,7 +342,6 @@ h2 {
     @include reponsive(tablette) {
         height: 40px;
         font-size: 18px;
-
         padding-left: 10px;
         padding-top: 9px;
     }
@@ -350,7 +349,6 @@ h2 {
     @include reponsive(phone) {
         height: 30px;
         font-size: 13px;
-
         padding-left: 10px;
         padding-top: 7px;
     }
@@ -407,11 +405,17 @@ h2 {
 }
 
 .collapse--show {
-    animation-name: translateCollapsingElementOpening;
+    animation-name: translateCollapsingElementOpening__desktop;
     animation-duration: $animation-time;
     animation-timing-function: ease-out;
     z-index: 1;
     position: relative;
+    @include reponsive(tablette) {
+        animation-name: translateCollapsingElementOpening__tablette;
+    }
+    @include reponsive(phone) {
+        animation-name: translateCollapsingElementOpening__phone;
+    }
 }
 
 @keyframes rotateChevronOpening {
@@ -434,7 +438,26 @@ h2 {
     }
 }
 
-@keyframes translateCollapsingElementOpening {
+@keyframes translateCollapsingElementOpening__desktop {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    10% {
+        opacity: 0;
+        transform: translateY(-54px);
+    }
+    11% {
+        opacity: 1;
+        transform: translateY(-54px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
+@keyframes translateCollapsingElementOpening__tablette {
     0% {
         opacity: 0;
         transform: translateY(-100%);
@@ -453,16 +476,62 @@ h2 {
     }
 }
 
+@keyframes translateCollapsingElementOpening__phone {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    10% {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+    11% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
 .collapse--hide {
-    animation: translateCollapsingElementClosing ease-out $animation-time;
+    animation: translateCollapsingElementClosing__desktop ease-out $animation-time;
     z-index: 1;
     position: relative;
+
+    @include reponsive(tablette) {
+        animation: translateCollapsingElementClosing__tablette ease-out $animation-time;
+    }
+    @include reponsive(phone) {
+        animation: translateCollapsingElementClosing__phone ease-out $animation-time;
+    }
 }
 
 .hide {
     display: none;
 }
-@keyframes translateCollapsingElementClosing {
+
+@keyframes translateCollapsingElementClosing__desktop {
+    0% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    90% {
+        opacity: 1;
+        transform: translateY(-54px);
+    }
+    91% {
+        opacity: 0;
+        transform: translateY(-54px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(-100%);
+    }
+}
+
+@keyframes translateCollapsingElementClosing__tablette {
     0% {
         opacity: 1;
         transform: translateY(0%);
@@ -474,6 +543,25 @@ h2 {
     91% {
         opacity: 0;
         transform: translateY(-40px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(-100%);
+    }
+}
+
+@keyframes translateCollapsingElementClosing__phone {
+    0% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    90% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+    91% {
+        opacity: 0;
+        transform: translateY(-30px);
     }
     100% {
         opacity: 1;
